--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   string_validator: ^0.1.4
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
