--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   string_validator: ^0.1.4
   http: ^0.12.2
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
