--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   string_validator: ^0.1.4
   http: ^0.12.2
   sqflite: ^1.3.0
+  test: ^1.15.7
+
 
 dev_dependencies:
   flutter_test:
