--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -17,4 +17,4 @@ jobs:
       with:
         flutter-version: '1.22.4'
     - run: flutter pub get
-    - run: flutter test
+    - run: flutter test --coverage
