--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,10 @@
 name: home_control
-description: Home control
+description: Controls Tasmota devices over http requests
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -31,6 +21,10 @@ dependencies:
   string_validator: ^0.1.4
   http: ^0.12.2
   sqflite: ^1.3.0
+  shared_preferences: ^0.5.12+4
+  package_info: ^0.4.0+16
+  connectivity: ^2.0.2
+  url_launcher: ^5.7.10
   test: ^1.15.7
 
 
