--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  string_validator: ^0.1.4
-  http: ^0.12.2
-  sqflite: ^1.3.0
-  shared_preferences: ^0.5.12+4
-  package_info: ^0.4.0+16
-  connectivity: ^2.0.2
-  url_launcher: ^5.7.10
-  sprintf: ^5.0.0
+  string_validator: ^0.3.0
+  http: ^0.13.4
+  sqflite: ^2.0.0+4
+  shared_preferences: ^2.0.8
+  package_info: ^2.0.2
+  connectivity: ^3.0.6
+  url_launcher: ^6.0.12
+  sprintf: ^6.0.0
   test: ^1.15.7
 
 
