--- a/.github/workflows/flutter_app.yml
+++ b/.github/workflows/flutter_app.yml
@@ -45,6 +45,12 @@ jobs:
         with:
           path: /opt/hostedtoolcache/flutter
           key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }}
+      - name: Android NDK toolchain Setup
+        uses: ravinderjangra/android-ndk-toolchain-setup@0.1
+        with:
+          api: '23'
+          arch: 'arm'
+          install-location: 'toolchains'
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: ${{ env.flutter_version }}
